--- a/client/index.html
+++ b/client/index.html
@@ -1,6 +1,7 @@
 <html ng-app='appointmentsApp'>
 <head>
 	<title>Appointments</title>
+	<link rel="stylesheet" type="text/css" href="static/styles.css">
 	<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.5/angular.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.5/angular-route.min.js"></script>
     <script src='javascripts/app.js'></script>
@@ -9,11 +10,12 @@
    
 </head>
 <body>
+	<div id="wrapper">
+		<div ng-controller='AppointmentsController as appointmentsCtrl'>
 
-	<div ng-controller='AppointmentsController as appointmentsCtrl'>
+			<div ng-view=""></div>
 
-		<div ng-view=""></div>
-
+		</div>
 	</div>
 
 </body>
